--- a/index.HTML
+++ b/index.HTML
@@ -49,10 +49,46 @@
                         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-
         </section>
 
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="" alt="" width="270"></img>
+                        <h3>Ігор Дем'яненко</h3>
+                            <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="" alt="" width="270"></img>
+                        <h3>Ольга Рєпіна</h3>
+                            <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="" alt="" width="270"></img>
+                        <h3>Микола Тарасов</h3>
+                            <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="" alt="" width="270"></img>
+                        <h3>Михайло Єрмаков</h3>
+                            <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
+    <footer>
+        
+    </footer>
    
 </body>
 </html>
