--- a/index.HTML
+++ b/index.HTML
@@ -54,9 +54,9 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
+                <li><img src="" alt="" width="370"></li>
+                <li><img src="" alt="" width="370"></li>
+                <li><img src="" alt="" width="370"></li>
             </ul>
         </section>
 
@@ -87,7 +87,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
    
 </body>
