--- a/index.HTML
+++ b/index.HTML
@@ -87,6 +87,20 @@
         </section>
     </main>
     <footer>
+        <a href="#">WebStudio</a>
+        <addres>
+            <ul>
+                <li>
+                    <a href="https://goo.gl/maps/vN2mYpMbgfntK4BM6" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </addres>
 
     </footer>
    
