--- a/index.HTML
+++ b/index.HTML
@@ -54,9 +54,9 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="" alt="" width="370"></li>
-                <li><img src="" alt="" width="370"></li>
-                <li><img src="" alt="" width="370"></li>
+                <li><img src="./images/box1.jpg" alt="чоловічі руки за клавіатурою ноутбука" width="370"></li>
+                <li><img src="./images/box2.jpg" alt="жіночі руки тримають мобільний телефон за клавіатурою ноутбука" width="370"></li>
+                <li><img src="./images/box3.jpg" alt="у руках розміщений гаджет, на якому здійснюються певні дії" width="370"></li>
             </ul>
         </section>
 
@@ -64,22 +64,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="" alt="" width="270"></img>
+                    <img src="./images/team1.jpg" alt="усміхнений мужчина з бородою в окулярах" width="270"></img>
                         <h3>Ігор Дем'яненко</h3>
                             <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="270"></img>
+                    <img src="./images/team2.jpg" alt="усміхнена жінка в окулярах" width="270"></img>
                         <h3>Ольга Рєпіна</h3>
                             <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="270"></img>
+                    <img src="./images/team3.jpg" alt="усміхнений чоловік в блакитній сорочці" width="270"></img>
                         <h3>Микола Тарасов</h3>
                             <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="270"></img>
+                    <img src="./images/team4.jpg" alt="чоловік в чорній футболці" width="270"></img>
                         <h3>Михайло Єрмаков</h3>
                             <p>UI Designer</p>
                 </li>
