--- a/index.HTML
+++ b/index.HTML
@@ -64,22 +64,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team1.jpg" alt="усміхнений мужчина з бородою в окулярах" width="270"></img>
+                    <img src="./images/team1.jpg" alt="усміхнений мужчина з бородою в окулярах" width="270">
                         <h3>Ігор Дем'яненко</h3>
                             <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team2.jpg" alt="усміхнена жінка в окулярах" width="270"></img>
+                    <img src="./images/team2.jpg" alt="усміхнена жінка в окулярах" width="270">
                         <h3>Ольга Рєпіна</h3>
                             <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team3.jpg" alt="усміхнений чоловік в блакитній сорочці" width="270"></img>
+                    <img src="./images/team3.jpg" alt="усміхнений чоловік в блакитній сорочці" width="270">
                         <h3>Микола Тарасов</h3>
                             <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team4.jpg" alt="чоловік в чорній футболці" width="270"></img>
+                    <img src="./images/team4.jpg" alt="чоловік в чорній футболці" width="270">
                         <h3>Михайло Єрмаков</h3>
                             <p>UI Designer</p>
                 </li>
@@ -88,7 +88,7 @@
     </main>
     <footer>
         <a href="#">WebStudio</a>
-        <addres>
+        <address>
             <ul>
                 <li>
                     <a href="https://goo.gl/maps/vN2mYpMbgfntK4BM6" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
@@ -100,7 +100,7 @@
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </addres>
+        </address>
 
     </footer>
    
