--- a/index.HTML
+++ b/index.HTML
@@ -14,6 +14,7 @@
             <li><a href="#">Студія</a></li>
             <li><a href="#">Портфоліо</a></li>
             <li><a href="#">Контакти</a></li>
+            <li><a href="#">Контакти</a></li>
         </ul>
        </nav>
        <ul>
