--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-       <nav> <a href="#">WebStudio</a>
+       <nav> <a href="">WebStudio</a>
         <ul>
             <li><a href="#">Студія</a></li>
             <li><a href="#">Портфоліо</a></li>
