--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
-       <nav> <a href="">WebStudio</a>
+       <nav> <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="#">Студія</a></li>
             <li><a href="#">Портфоліо</a></li>
@@ -87,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <address>
             <ul>
                 <li>
